--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carousel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Nav</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite/dist/flowbite.min.js"></script>
 </head>
 
 <!-- NAVIGATION BAR -->
