--- a/index.html
+++ b/index.html
@@ -270,10 +270,11 @@
 <section class="bg-white dark:bg-gray-900 py-12 px-4 relative select-none">
 <div class="w-full relative overflow-hidden">
 
-    <!-- Carousel container -->
-    <div id="carouselCards" class="flex gap-6 overflow-x-auto scroll-smooth no-scrollbar transition-all duration-700 ease-in-out cursor-grab active:cursor-grabbing">
+   <div class="w-full max-w-screen-xl mx-auto relative overflow-hidden">
+  <div id="carouselCards" class="flex gap-6 flex-nowrap min-w-0 overflow-x-auto scroll-smooth no-scrollbar transition-all duration-700 ease-in-out cursor-grab active:cursor-grabbing">
+
 <!-- Card 1 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -295,7 +296,7 @@
 </a>
 
 <!-- Card 2 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -317,7 +318,7 @@
 </a>
 
 <!-- Card 3 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -339,7 +340,7 @@
 </a>
 
 <!-- Card 4 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -361,7 +362,7 @@
 </a>
 
   <!-- Card 5 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -383,7 +384,7 @@
 </a>
 
  <!-- Card 6 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -405,7 +406,7 @@
 </a>
 
  <!-- Card 7 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -427,7 +428,7 @@
 </a>
 
  <!-- Card 8 -->    
-<a href="#" class="block max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
+<a href="#" class="block max-w-sm flex-shrink-0 bg-white border border-gray-200 rounded-lg shadow-sm overflow-hidden hover:shadow-md transition-shadow dark:bg-gray-800 dark:border-gray-700">
     <!-- Image wrapper with overflow-hidden to contain zoom -->
     <div class="relative overflow-hidden">
         <img class="zoom-img w-full rounded-t-lg" src="images/sample-image.jpeg" alt="" />
@@ -484,7 +485,7 @@
 </section>
 
 
-<div class="px-4 md:px-8">
+<div class="px-4 md:px-8 bg-white dark:bg-transparent">
   <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
     <div class="grid gap-4">
       <a href="#"><img class="zoom-img h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image.jpg" alt=""></a>
@@ -508,6 +509,7 @@
     </div>
   </div>
 </div>
+
 
 
 
