--- a/index.html
+++ b/index.html
@@ -514,6 +514,8 @@
   </div>
 </div>
 
+
+  <!-- ACCORDION -->
 <section class="bg-white px-4 py-8 antialiased dark:bg-gray-900 md:py-16">
   <div class="max-w-screen-xl mx-auto">
 <div id="accordion" class="divide-y-2 divide-gray-300 dark:divide-gray-700">
@@ -536,8 +538,8 @@
       <div class="accordion-item overflow-hidden transition-all duration-500 ease-in-out">
         <button class="accordion-header flex justify-between items-center w-full py-5 text-left text-gray-900 dark:text-white text-2xl font-bold tracking-tight focus:outline-none">
           <span>How is Apple News+ different from Apple News?</span>
-          <svg class="w-5 h-5 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+           <svg class="w-6 h-6 transition-transform duration-300 text-gray-900 dark:text-white stroke-[3]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
           </svg>
         </button>
         <div class="accordion-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-gray-600 dark:text-gray-300">
@@ -550,8 +552,8 @@
        <div class="accordion-item overflow-hidden transition-all duration-500 ease-in-out">
         <button class="accordion-header flex justify-between items-center w-full py-5 text-left text-gray-900 dark:text-white text-2xl font-bold tracking-tight focus:outline-none">
           <span>How is Apple News+ different from Apple News?</span>
-          <svg class="w-5 h-5 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+           <svg class="w-6 h-6 transition-transform duration-300 text-gray-900 dark:text-white stroke-[3]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
           </svg>
         </button>
         <div class="accordion-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-gray-600 dark:text-gray-300">
