--- a/index.html
+++ b/index.html
@@ -39,159 +39,98 @@
   style="height: calc(100vh - 3rem); overflow-y: auto;" aria-label="Sidebar">
 
   <div class="h-full px-4 py-4 max-w-4xl mx-auto">
-    <div id="sidebar-menu" class="space-y-12 flex flex-col items-center">
+    <div id="sidebar-menu" class="space-y-5 flex flex-col items-center">
 
-      <!-- Menu Item 1 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">Schedules</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-        </div>
-      </div>
+   <!-- Menu Item 1 -->
+<div class="sidebar-menu-item flex flex-col items-center">
+  <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
+    <h2 class="subtext-title text-white">Schedules</h2>
+    <svg class="w-5 h-5 stroke-white transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
 
-        <!-- Menu Item 1 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">Schedules</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-        </div>
-      </div>
+  <div class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out mt-3 space-y-1 text-center flex flex-col items-center">
+  <a href="#"  class="subtext submenu-link inline-block text-[#FFFFF]">The 30th year celebration</a>
+  <a href="#" class="subtext submenu-link inline-block text-[#FFFFF]">Linggo ng Kabataan</a>
+  <a href="#" class="subtext submenu-link inline-block text-[#FFFFF]">Championship League take off</a>
+  <br>
+  <br>
+  
+</div>
+</div>
 
-        <!-- Menu Item 1 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">Schedules</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-            <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-            <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-        </div>
-      </div>
 
-        <!-- Menu Item 1 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">Schedules</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-        </div>
-      </div>
+     <!-- Menu Item 2 -->
+<div class="sidebar-menu-item flex flex-col items-center">
+  <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
+    <h2 class="subtext-title text-white">Articles</h2>
+    <svg class="w-5 h-5 stroke-white transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
 
-        <!-- Menu Item 1 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">Schedules</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-        </div>
-      </div>
+  <div class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out mt-3 space-y-1 text-center flex flex-col items-center">
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">The 30th year celebration</a>
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">Linggo ng Kabataan</a>
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">Championship League take off</a>
+    <br>
+  <br>
+  </div>
+</div>
 
-        <!-- Menu Item 1 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">Schedules</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Today's event
-          </a>
-          <a href="https://example.com/apple-news" class="subtext text-white block hover:underline">
-            Tomorrow's event
-          </a>
-        </div>
-      </div>
+     <!-- Menu Item 3 -->
+<div class="sidebar-menu-item flex flex-col items-center">
+  <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
+    <h2 class="subtext-title text-white">About</h2>
+    <svg class="w-5 h-5 stroke-white transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
 
-      <!-- Menu Item 2 -->
-      <div class="sidebar-menu-item flex flex-col items-center">
-        <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
-          <h2 class="subtext-title text-[#ffdd1a]">About</h2>
-          <svg class="w-4 h-4 stroke-[#ffdd1a] transition-transform duration-300" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-          </svg>
-        </button>
-        <div
-          class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out text-center mt-4 space-y-2">
-          <a href="https://example.com/apple-news-plus" class="subtext text-white block hover:underline">
-            The SK
-          </a>
-          <a href="https://example.com/apple-news-plus" class="subtext text-white block hover:underline">
-            Developer
-          </a>
-        </div>
-      </div>
+  <div class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out mt-3 space-y-1 text-center flex flex-col items-center">
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">What is SK</a>
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">SK Officials</a>
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">About Developers</a>
+    <br>
+  <br>
+  </div>
+</div>
+
+     <!-- Menu Item 4 -->
+<div class="sidebar-menu-item flex flex-col items-center">
+  <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
+    <h2 class="subtext-title text-white">Contact</h2>
+    <svg class="w-5 h-5 stroke-white transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
+
+  <div class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out mt-3 space-y-1 text-center flex flex-col items-center">
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">Send a message</a>
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">Send a feedback</a>
+    <a href="#" class="subtext submenu-link block text-[#FFFFF]">Schedule a meetup</a>
+    <br>
+  <br>
+  </div>
+</div>
+
+     <!-- Menu Item 5 -->
+<div class="sidebar-menu-item flex flex-col items-center">
+  <button class="sidebar-menu-header flex items-center space-x-2 focus:outline-none">
+    <h2 class="subtext-title text-white">Site Map</h2>
+    <svg class="w-5 h-5 stroke-white transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
+
+  <div class="sidebar-menu-body max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out mt-3 space-y-1 text-center flex flex-col items-center">
+    <a href="#" class="subtext submenu-link inline-block text-[#FFFFF]">Today's event bbbbbbbbbbbbbbbbbbbbbb</a>
+    <a href="#" class="subtext submenu-link inline-block text-[#FFFFF]">Tomorrow's event</a>
+   <br>
+  <br>
+  </div>
+</div>
 
     </div>
   </div>
@@ -205,32 +144,51 @@
 
 
 <body>
-<section
-  class="relative min-h-screen bg-cover bg-center bg-no-repeat text-gray-800 dark:text-gray-100 flex items-center justify-center"
-  style="background-image: url('images/images.png');"
->
-  <!-- Dark mode background override (now dark image) -->
+    <!-- HERO -->
+<section class="relative h-screen antialiased overflow-hidden">
+  <!-- Solid blue background (starts visible) -->
+  <div id="bg-solid" class="absolute top-0 left-0 w-full h-full bg-[#0d0060] transition-opacity duration-1000 z-0"></div>
+
+  <!-- Background video (fades in after 3 seconds) -->
+  <video
+    id="bg-video"
+    class="absolute top-0 left-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000 z-0"
+    muted
+    autoplay
+    playsinline
+  >
+    <source src="path-to-your-video.mp4" type="video/mp4" />
+  </video>
+
+  <!-- Final background image (shown after video ends) -->
   <div
-    class="absolute inset-0 bg-cover bg-center bg-no-repeat hidden dark:block"
-    style="background-image: url('images/sample-image.jpeg');"
+    id="bg-image"
+    class="absolute top-0 left-0 w-full h-full bg-cover bg-center bg-no-repeat opacity-0 transition-opacity duration-1000 z-0"
+    style="background-image: url('images/final-image.jpg');"
   ></div>
 
-  <!-- Content wrapper -->
-   <div class="text-center mb-12">
-<h2 class="hero-heading mt-4 text-black dark:text-white">Designed to get better<br>with time</h2>
-  <p class="fly-in-slow subtext-title mt-4 text-gray-700 dark:text-gray-400">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis sint autem nesciunt, laudantium quia tempore delect.
-      </p>
+  <!-- Content with padding and margin, centered -->
+  <div class="relative z-10 px-4 py-12 md:py-16 h-full flex items-center">
+    <div class="max-w-screen-xl mx-auto w-full">
+      <div class="text-center mb-12">
+        <h2 class="hero-heading mt-4 text-black dark:text-white">
+          Designed to get better<br />with time
+        </h2>
+        <p class="fly-in-slow subtext-title mt-4 text-gray-700 dark:text-gray-400">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis sint autem nesciunt, laudantium quia tempore delect.
+        </p>
         <p class="subtext text-gray-700 dark:text-gray-400">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis sint autem nesciunt, laudantium quia tempore delect.
-</p>
-       <p class="fly-in-slow context mt-4 text-gray-700 dark:text-gray-400">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis sint autem nesciunt, laudantium quia tempore delect.
-      </p>
-</div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis sint autem nesciunt, laudantium quia tempore delect.
+        </p>
+        <p class="fly-in-slow context mt-4 text-gray-700 dark:text-gray-400">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis sint autem nesciunt, laudantium quia tempore delect.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
 
-
+    <!-- END OF HERO -->
   
 
 <section class="bg-white px-4 py-12 antialiased dark:bg-gray-900 md:py-16">
